Refactor health management commands and update crafting recipe handling